[project]
name = "agentic-sop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.54.0",
]
